# CAVEMAN

./: .gitmodules  README.md  keys.sh
automation/navigation2/: README.md
automation/navigation2/nav2_util/include/nav2_util/: service_client.hpp
four_ws_converter/: package.xml  setup.cfg  setup.py
four_ws_converter/four_ws_converter/: cmd_vel_to_4ws.py
gazebo_ros_four_wheel_steering/: CMakeLists.txt
gazebo_ros_four_wheel_steering/launch/: teleop.launch.py
gazebo_ros_four_wheel_steering/src/: plugin.cpp
realsense-ros/realsense2_camera/config/: d435.yaml
realsense-ros/realsense2_description/launch/: gz.launch.py
ros2_controllers/joint_state_broadcaster/: CMakeLists.txt
ros2_controllers/joint_state_controller/: CMakeLists.txt
rover/: CMakeLists.txt  README.md  package.xml
rover/config/: controllers.yaml  madgwick.yaml  my_controllers.yaml  nav2_params.yaml  odom_ekf.yaml  only_imu_ekf.yaml  powerA.yaml  ros2_control.yaml  teleop_joy.yaml  view_rover.rviz  xbox.yaml
rover/description/: materials.xacro  ros2_control.xacro  rover.urdf.xacro  rover_core.xacro
rover/include/: cmd_vel_to_joints.hpp  cmd_vel_to_wheels.hpp  joy_to_drive.hpp  rover_4wd_controller.hpp
rover/launch/: ekf.launch.py  joy.py  joy_and_comms.py  joy_comms_rs.py  js_pub.launch.py  launch_joy.py  launch_sim.launch.py  madgwick.launch.py  nav2.launch.py  rsp.launch.py  rtabmap.launch.py
rover/plugins/: ros2_control.xacro
rover/src/: .UART.cpp.swp  cmd_vel_to_joints.cpp  cmd_vel_to_wheels.cpp  fake_imu.py  joy_to_drive.cpp  rover_4wd_controller.cpp  rover_4wd_translator.cpp
rover_comms/: CMakeLists.txt  package.xml
rover_comms/include/: rover_comm.hpp  rover_comms_listener.hpp
rover_comms/src/: main.cpp  rover_comm.cpp  rover_comms_listener.cpp
rover_comms/test/: test_comms.cpp
rover_description/: CMakeLists.txt  package.xml
rover_description/launch/: gz.launch.py  realsense.launch.py  rover.launch.py  start_rviz.launch.py
rover_description/rover_desc/: RGB_camera.xacro  bl_servo.part  bl_steer.stl  bl_whl.stl  body.stl  br_clamp.part  br_clamp.stl  br_motor.part  br_servo.part  br_steer.part  config.json  fl_clamp.part  fl_clamp.stl  fl_motor.part  fl_servo.part  fl_servo.stl  fl_steer.part  fl_steer.stl  fl_whl.part  fr_clamp.part  fr_clamp.stl  fr_steer.part  gazebo_colors.xacro  gazebo_params.xacro  gazebo_realsense.xacro  gz_realsense.xacro  imu.xacro  left_IR.xacro  left_rocker.part  left_rocker.stl  realsense.urdf  realsense.xacro  right_IR.xacro  right_rocker.stl  robot.urdf  rover.urdf  rover.xacro  tire_params.xacro
rover_description/rover_desc/parts/: bl_clamp.part  bl_clamp.stl  bl_motor.part  bl_servo.part  bl_servo.stl  bl_steer.part  bl_whl.part  body.part  body.stl  br_clamp.part  br_motor.part  br_servo.part  br_servo.stl  br_steer.part  br_steer.stl  br_whl.part  br_whl.stl  config.json  fl_clamp.part  fl_motor.part  fl_motor.stl  fl_servo.part  fl_steer.part  fl_whl.part  fl_whl.stl  fr_clamp.part  fr_motor.part  fr_servo.part  fr_servo.stl  fr_steer.part  fr_steer.stl  fr_whl.part  fr_whl.stl  imager.part  imager.stl  left_rocker.part  pitch.part  pitch.stl  right_rocker.part  robot.urdf  (+4 more)
rover_description/rviz/: rover.rviz
rover_gz/: CMakeLists.txt  package.xml
rover_gz/config/: controllers.yaml
rover_gz/models/tunnel1/: model.config  model.sdf
rover_gz/models/tunnel1/meshes/: gz_world.dae  tunnel1.stl
rover_gz/plugins/: ros2_control.xacro
rover_gz/src/: rover_control.cpp  rover_plugin.cpp
rover_gz/worlds/: tunnel.world
rover_interfaces/: CMakeLists.txt  package.xml
rover_interfaces/msg/: Encoders.msg  Odomplot.msg
rtabmap/corelib/src/optimizer/: OptimizerGTSAM.cpp
rtabmap_ros/rtabmap_examples/launch/: realsense_d435.launch.py  realsense_d435_color.launch.py  realsense_sim.launch.py
xacro/: CMakeLists.txt
